create new routes for datasets

--- a/public/elements/seed-app/seed-app.html
+++ b/public/elements/seed-app/seed-app.html
@@ -141,13 +141,16 @@
                 "icon": "fa-info-circle"
               }
               //Uncomment this block to show the Simple Asset navigation item on the menu.
-              /* // asset-nav-item
               ,{
                 "label": "Simple Asset",
                 "path": "/simple-asset",
                 "icon": "fa-sitemap"
+              },
+              {
+                "label": "Datasets",
+                "path": "/datasets",
+                "icon": "fa-square"
               }
-              // end asset-nav-item */
             ]
           }
         },
@@ -156,8 +159,8 @@
           type: Array,
           value: function() {
             return [{
-              "label": "Learn More",
-              "href": "https://www.predix.io/resources/tutorials",
+              "label": "Balancer app",
+              "href": "/#/rmd/",
               "target": "_blank"
             }
           ]
