remove cruft code

--- a/public/elements/seed-app/seed-app.html
+++ b/public/elements/seed-app/seed-app.html
@@ -149,13 +149,13 @@
                 "label": "About",
                 "path": "/about",
                 "icon": "fa-info-circle"
-              }
-              //Uncomment this block to show the Simple Asset navigation item on the menu.
-              ,{
-                "label": "Simple Asset",
-                "path": "/simple-asset",
-                "icon": "fa-sitemap"
               },
+              //Uncomment this block to show the Simple Asset navigation item on the menu.
+              // ,{
+              //   "label": "Simple Asset",
+              //   "path": "/simple-asset",
+              //   "icon": "fa-sitemap"
+              // },
               {
                 "label": "Download Datasets",
                 "path": "/datasets",
