training set added

--- a/public/elements/seed-app/seed-app.html
+++ b/public/elements/seed-app/seed-app.html
@@ -145,11 +145,11 @@
                 "path": "/rmd",
                 "icon": "fa-line-chart"
               },
-              {
-                "label": "About",
-                "path": "/about",
-                "icon": "fa-info-circle"
-              },
+              // {
+              //   "label": "About",
+              //   "path": "/about",
+              //   "icon": "fa-info-circle"
+              // },
               //Uncomment this block to show the Simple Asset navigation item on the menu.
               // ,{
               //   "label": "Simple Asset",
