power monitoring header

--- a/public/elements/seed-app/seed-app.html
+++ b/public/elements/seed-app/seed-app.html
@@ -141,7 +141,7 @@
           value: function() {
             return [
               {
-                "label": "Asset Monitoring",
+                "label": "Power Monitoring",
                 "path": "/rmd",
                 "icon": "fa-line-chart"
               },
