--- a/public/elements/seed-table/seed-table.html
+++ b/public/elements/seed-table/seed-table.html
@@ -13,14 +13,15 @@
     <template>
       <px-card id="tableCard" style="padding-top: 15px">
         <px-data-table table-data="{{seedTableData}}" hide-pagination-control="[[!showPagination]]">
-          <px-data-table-column name="tag" type="html"></px-data-table-column>
-          <px-data-table-column name="alertStatus" label="Alert Status" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
-          <px-data-table-column name="deltaThreshold" label="Delta to Threshold" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
-          <px-data-table-column name="lastTagReading" label="Last Meter Reading" hide="[[showAssetOnly]]"></px-data-table-column>
-          <px-data-table-column name="currentValue" label="Current Value" hide="[[showAssetOnly]]"></px-data-table-column>
-          <px-data-table-column name="unit" label="Units" hide="[[showAssetOnly]]"></px-data-table-column>
-          <px-data-table-column name="thresholdMin" label="Threshold Min"></px-data-table-column>
-          <px-data-table-column name="thresholdMax" label="Threshold Max"></px-data-table-column>
+          <px-data-table-column name="time" type="html"></px-data-table-column>
+          <px-data-table-column name="Wind Direction" label="Wind Direction" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
+          <px-data-table-column name="Wind Speed" label="Wind Speed" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
+          <px-data-table-column name="Hydraulic Oil Temp" label="Hydraulic Oil Temp" hide="[[showAssetOnly]]"></px-data-table-column>
+          <px-data-table-column name="Ambient Temp" label="Ambient Temp" hide="[[showAssetOnly]]"></px-data-table-column>
+          <px-data-table-column name="Turbine Status" label="Turbine Status" hide="[[showAssetOnly]]"></px-data-table-column>
+          <px-data-table-column name="Expected Apparent Power" label="Expected Apparent Power"></px-data-table-column>
+          <px-data-table-column name="Current Apparent Power" label="Current Apparent Power"></px-data-table-column>
+          <px-data-table-column name="Power Delta" label="Power Delta"></px-data-table-column>
         </px-data-table>
       </px-card>
     </template>
